vcluster_versioned_docs/version-0.24.0/configure/vcluster-yaml/external/platform/api-key.mdx
---
title: apiKey
sidebar_label: apiKey
sidebar_position: 1
toc_max_heading_level: 2
---

import ProAdmonition from '../../../../_partials/admonitions/pro-admonition.mdx'

import Mark from "@site/src/components/Mark";
import InterpolatedCodeBlock from "@site/src/components/InterpolatedCodeBlock";
import ApiKey from '@site/platform/api/_partials/resources/config/external/platform/apiKey.mdx'
import Flow, { Step } from '@site/src/components/Flow';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';


<ProAdmonition/>

<!--vale off-->

Enable secure communication between your virtual cluster and the vCluster Platform. 
You can configure the platform to manage and authenticate virtual cluster connections consistently across different environments.

## Connect virtual clusters to the vCluster Platform 

To connect a virtual cluster to the vCluster Platform, you can use an API key—referred to as an [access key](/platform/next/api/authentication) in the platform's console. There are two authentication methods:

- **Shared access** (_Recommended_): Create a single Kubernetes Secret containing the access key, and reference it in multiple virtual clusters, even if they are deployed in different namespaces. This approach simplifies management, reduces overhead, and eases credential rotation, making it suitable for most users and production environments. For most scenarios, using a shared access key is the preferred approach due to its simplicity and ease of maintenance.

- **Dedicated access**: Create separate Kubernetes Secrets, each with a unique access key, for every virtual cluster. This method provides granular access control and allows revocation of access to individual clusters.


<br />

<Tabs>
  <TabItem value="shared" label="Shared access" default>
    
  ### Connect a virtual cluster to the platform using a shared access key

  Use a shared access key to authenticate and connect your virtual cluster to the platform.
  
  ### Prerequisites

  Before you begin, ensure you have: 

  - A vCluster Platform instance set up and accessible.
  - Permissions to create and configure an access key in the platform.
  - Access to create Kubernetes Secrets on the host Kubernetes cluster (where the virtual cluster runs).
    
  ### Configure shared access for a virtual cluster

    <Flow>
      <Step title="Create the access key">
        
        Log in to vCluster platform and create an [access key](/platform/next/api/authentication). 
        
      </Step>

      <Step title="Assign the vCluster role">

        When creating the access key, you must define the `vcluster` role in the API key YAML specification in the platform console:

        ```yaml title="Role specification" {3-4}
        spec:
          scope:
            roles:
              - role: vcluster
            projects:
              - project: '*'
          allowLoftCli: true
        type: User
        status: {}
        ```

        :::note
        Assigning the `vcluster` role is required. Without it, the vCluster cannot authenticate with the platform and connection errors occur.
        :::

      </Step>
      <Step title="Create the Secret">
        
        Create the Secret in a namespace on the host cluster. This defaults to `vcluster-platform-api-key` if undefined.
        
        :::note
        This namespace does **not** need to match the target namespace used by the virtual cluster, but it must exist on the host where the vCluster is deployed.
        :::
        
        Run the create command, ensuring you replace the placeholders with your specific values:

        - Replace `ACCESS_KEY` with your API key (also referred to as an access key).
        - Replace `PLATFORM_HOST` with the platform domain. # For example loft.my-domain.com
        - Replace `SECRET_NAMESPACE` with the namespace where you want to store the Secret.

        :::note
        You can create the Secret in the `vcluster-platform` namespace by default to ensure access for all virtual clusters managed by the platform. Use a different namespace only if there's a specific need to scope it separately.
        :::

        <br />
  <!-- vale off -->
  <InterpolatedCodeBlock
  code={
  `kubectl create secret generic [[VAR:SECRET NAME:vcluster-platform-api-key]] \\
    --from-literal=accessKey=[[VAR:ACCESS KEY:YOUR_ACCESS_KEY]] \\
    --from-literal=host=[[VAR:PLATFORM HOST:YOUR_PLATFORM_HOST]] \\
    -n [[VAR:SECRET NAMESPACE:SECRET_NAMESPACE]]`}
          language="bash"
          title="Create Secret"
  />
  <!-- vale on -->

      </Step>
      
      <Step title="Reference the Secret in vcluster.yaml">
        
        In your `vcluster.yaml` file, define the following parameters to reference the Secret and configure access control:

        - `secretName`: Specifies the name of the Secret containing the API key. Defaults to `vcluster-platform-api-key` if undefined.
        - `namespace`: Specifies the namespace where the Secret is located. If different from the virtual cluster's namespace, ensure that the virtual cluster has access to this namespace.
        - `createRBAC`: When set to `true`, vCluster automatically creates the necessary `Role` and `RoleBinding` resources to allow access to the Secret. Defaults to true.

        <br />
        
  <!-- vale off -->
  <InterpolatedCodeBlock
    code={
  `external:
    platform:
      apiKey:
        secretName: [[VAR:SECRET NAME:vcluster-platform-api-key]]
        namespace: [[VAR:NAMESPACE:SECRET_NAMESPACE]]
        createRBAC: [[VAR:CREATE RBAC:true]]
  `}
      language="yaml"
        />       
      </Step>
    </Flow>
  </TabItem>
  
  <TabItem value="dedicated" label="Dedicated access">

  ### Connect a virtual cluster to the platform with a dedicated access key

  Authenticate a virtual cluster with the platform using a dedicated access key.

  ### Prerequisites

  Before you begin, ensure you have: 

  - Access to the vCluster Platform.
  - The [vCluster CLI installed](/platform/install/quick-start-guide) installed on your local machine.
  - The ability for each user to generate their own access key from the platform console.
    
  ### Connect a virtual cluster to the platform using dedicated access

  <Flow>
    <Step title="Locate or create the vcluster.yaml file">

    You must configure `vcluster.yaml` to define how your virtual cluster connects to the platform.

    - If you are creating a new virtual cluster, create a new `vcluster.yaml` file in your working directory.
    - If you are modifying an existing virtual cluster, locate the `vcluster.yaml` file used during its deployment.

    :::note
    The `vcluster.yaml` file is typically stored locally in your project folder or provided as part of the Helm configuration used to deploy the virtual cluster.
    :::

    </Step>

    <Step title="Configure and deploy vcluster.yaml for dedicated access">

    Update your `vcluster.yaml` file to enable individual virtual cluster authentication:

    ```yaml title="vcluster.yaml"
    external:
      platform:
    ```

    :::note
    This configuration requires authentication with a dedicated access key instead of creating a shared Kubernetes Secret.
    :::

    Then in the vCluster CLI, [deploy the updated configuration](/vcluster/manage/deploy-changes/):

<InterpolatedCodeBlock
  code={`vcluster create --upgrade [[VAR:VCLUSTER NAME:VCLUSTER_NAME]] -n [[VAR:NAMESPACE:VCLUSTER_NAMESPACE]] -f vcluster.yaml`}
  language="bash"
  title="Upgrade vCluster using vcluster.yaml"
/>
    </Step>

    <Step title="Generate an access key">

    To connect to the virtual cluster using individual access, each user must:

      1. Log in to the vCluster Platform console.
      2. Navigate to **Users** and click **Access Keys**.
      3. Click **Create Access Key**, configure the settings by providing a display name and optionally limiting its scope to specific clusters, namespaces, or virtual clusters, and save to generate a new access key.
      4. Copy and securely store the access key.

      :::note
      To view your generated access keys, navigate to **Users** > **Access Keys**.
      :::

    </Step>

    <Step title="Connect to the virtual cluster">

    Each user can connect to the virtual cluster by using their dedicated access key through the vCluster CLI.

    Log in to the platform:

 <!-- vale off -->
<InterpolatedCodeBlock
  code={`vcluster platform login [[VAR:PLATFORM URL:YOUR_PLATFORM_URL]] --access-key [[VAR:ACCESS KEY:YOUR_DEDICATED_ACCESS_KEY]]`}
  language="bash"
  title="Log in to the platform"
/>

<br />

    Then, connect to the virtual cluster:

<InterpolatedCodeBlock
  code={`vcluster connect [[VAR:VCLUSTER NAME:VCLUSTER_NAME]] --project [[VAR:PROJECT NAME:DEFAULT]]`}
  language="bash"
  title="Connect to vCluster"
/>
<!-- vale on -->
    </Step>
  </Flow>
 </TabItem>
</Tabs>


## Example

<Tabs>
  <TabItem value="shared" label="Shared access" default>
  
    ```yaml title="Shared access example"
    external:
      platform:
        apiKey:
          secretName: vcluster-platform-api-key  # Defaults to vcluster-platform-api-key if undefined
          namespace: vcluster-namespace  # Namespace to search for the secret. If undefined, it searches the vCluster namespace. If different, vCluster needs access to the target namespace.
          createRBAC: true  # Defaults to true. Automatically creates the necessary RBAC roles and role bindings to locate the secret.
    ```
  </TabItem>

  <TabItem value="dedicated" label="Dedicated access">

    ```yaml title="Dedicated access example"
    external:
      platform:
        userBased: true # Enables individual virtual cluster access; each user must authenticate with their own dedicated access key.
    ```

  </TabItem>
</Tabs>


## Config reference

<ApiKey />
